[package]
name = "hpke-rs-libcrux"
version = "0.5.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-libcrux"
description = "Crypto backend for HPKE using formally verified code from libcrux."
readme = "Readme.md"
repository = "https://github.com/cryspen/hpke-rs"

[dependencies]
hpke-rs-crypto = { version = "0.4.0", path = "../traits" }
libcrux-ecdh = { version = "0.0.4", default-features = false }
libcrux-hkdf = { version = "0.0.4" }
libcrux-kem = { version = "0.0.4", default-features = false }
libcrux-aead = { version = "0.0.4" }
libcrux-traits = { version = "0.0.4", default-features = false }
# Randomness
rand = { version = "0.9", default-features = false }
rand_core = { version = "0.9", features = ["os_rng"] }
rand_chacha = { version = "0.9", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[features]
deterministic-prng = [] # ⚠️ FOR TESTING ONLY.
std = [
    "rand/std",
    "rand_chacha/std",
    "libcrux-ecdh/std",
    "libcrux-kem/std",
    "hpke-rs-crypto/std",
]

[[bench]]
name = "bench_hkdf"
harness = false

[[bench]]
name = "bench_p256"
harness = false

[[bench]]
name = "bench_x25519"
harness = false
